--- a/Assign1/app/src/main/res/layout-land/activity_main.xml
+++ b/Assign1/app/src/main/res/layout-land/activity_main.xml
@@ -9,11 +9,12 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="175dp"
-        android:layout_height="248dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_width="254dp"
+        android:layout_height="254dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/input">
 
@@ -34,8 +35,8 @@
 
     <EditText
         android:id="@+id/input"
-        android:layout_width="641dp"
-        android:layout_height="53dp"
+        android:layout_width="640dp"
+        android:layout_height="63dp"
         android:layout_marginStart="-20dp"
         android:layout_marginLeft="-20dp"
         android:layout_marginTop="4dp"
@@ -47,7 +48,7 @@
         android:text="@string/Display"
         android:textAlignment="textEnd"
         android:textColor="@color/LIGHT_GREY"
-        android:textSize="30sp"
+        android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,16 +59,12 @@
         android:id="@+id/tableLayout"
         android:layout_width="439dp"
         android:layout_height="286dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginLeft="7dp"
         android:layout_marginTop="-50dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
         android:layout_marginBottom="-50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/scrollView2"
         app:layout_constraintTop_toBottomOf="@+id/input">
 
         <TableRow
@@ -359,17 +356,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="15dp"
         android:text="@string/DarkMode"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
         app:layout_constraintEnd_toStartOf="@+id/tableLayout"
         app:layout_constraintHorizontal_bias="0.085"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/input" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
