--- a/Assign1/app/src/main/res/layout/activity_main.xml
+++ b/Assign1/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,11 @@
         android:id="@+id/input"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="35dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
         android:autofillHints="false"
         android:gravity="end"
         android:inputType="none"
@@ -58,6 +62,10 @@
         android:id="@+id/tableLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
