--- a/Assign1/app/src/main/res/layout-land/activity_main.xml
+++ b/Assign1/app/src/main/res/layout-land/activity_main.xml
@@ -9,14 +9,13 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="254dp"
-        android:layout_height="254dp"
+        android:layout_width="255dp"
+        android:layout_height="236dp"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input">
+        app:layout_constraintTop_toBottomOf="@+id/DarkMode">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,7 +25,7 @@
             <TextView
                 android:id="@+id/historyTxt"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="221dp"
                 android:text="@string/History"
                 android:textColor="@color/LIGHT_GREY"
                 android:textSize="20sp" />
@@ -35,11 +34,11 @@
 
     <EditText
         android:id="@+id/input"
-        android:layout_width="640dp"
-        android:layout_height="63dp"
+        android:layout_width="641dp"
+        android:layout_height="62dp"
         android:layout_marginStart="-20dp"
         android:layout_marginLeft="-20dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
         android:autofillHints="false"
@@ -57,15 +56,16 @@
 
     <TableLayout
         android:id="@+id/tableLayout"
-        android:layout_width="439dp"
-        android:layout_height="286dp"
-        android:layout_marginTop="-50dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_width="444dp"
+        android:layout_height="361dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:layout_marginBottom="-50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input">
+        app:layout_constraintTop_toBottomOf="@+id/input"
+        app:layout_constraintVertical_bias="0.34">
 
         <TableRow
             android:layout_width="match_parent"
@@ -359,7 +359,6 @@
         android:layout_marginTop="15dp"
         android:text="@string/DarkMode"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
         app:layout_constraintEnd_toStartOf="@+id/tableLayout"
         app:layout_constraintHorizontal_bias="0.085"
         app:layout_constraintStart_toStartOf="parent"
